--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ section{
 }
 section .container{
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
+
 }
 section h1{
     margin-left: 10px;
@@ -22,10 +21,7 @@ section h1{
     margin-block: 40px;
     border-radius: 25px;
     box-shadow: 0 0 10px rgba(187, 184, 184, 0.5); 
-    width: 40%;
-    margin-inline: auto;
-    
-    
+    width: 50%;
 }
 .first-section-card{
     padding: 0 30px;
@@ -52,9 +48,10 @@ section h1{
 }
 .description{
     background-color: #f0f0f0;
-    padding: 10px 30px;
+    width: 100%;
     overflow-y: scroll;
     height: 250px;
+    padding: 0 30px;
 }
 .audio-players-list{
     display: flex;
@@ -80,7 +77,8 @@ section h1{
     font-weight: 500;   
 }
 .playList{
-    
+    overflow-y: scroll;
+    height: 300px;
     background-color: #fafafa;
     padding: 10px 30px;
 }
@@ -95,10 +93,42 @@ audio::-webkit-media-controls-panel {
   outline: none !important;
   text-align: left;
 }
-
 audio::-webkit-media-controls-play-button {
     transform: scale(2, 2);
     background-color: transparent !important;
     outline: none !important;
 }
+
+.audio-image-section img{
+    height: 600px;
+    width: 500px;
+    float: right;
+}
+.audio-image-section{
+    display: flex;
+    justify-content: space-between;
+} 
+@media only screen and (max-width: 1008px) {
+    .audio-player-container{
+        margin-block: 40px;
+        border-radius: 25px;
+        box-shadow: 0 0 10px rgba(187, 184, 184, 0.5); 
+        width: 90%;
+        margin-inline: auto;
+    }
+    .audio-image-section{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    } 
+    .audio-image-section img{
+        height: 400px;
+        width: 300px;
+       
+    }
+    .img-right {
+        display: flex;
+        justify-content: center;
+    }
+  }
 
